force-app/main/default/objects/Product2/fields/Backorder_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Backorder_Expected_Date__c</fullName>
    <label>Backorder Expected Date</label>
    <type>Date</type>
</CustomField>