force-app/main/default/objects/Product2/fields/Warehouse_Manager__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Product2WarehouseManager</relationshipName>
    <type>Lookup</type>
</CustomField>