force-app/main/default/objects/Product2/fields/Warehouse_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Manager_Name__c</fullName>
    <formula>Warehouse_Manager__r.FirstName &amp; &apos; &apos; &amp; Warehouse_Manager__r.LastName</formula>
    <label>Warehouse Manager</label>
    <type>Text</type>
</CustomField>